--- a/task_application/package.json
+++ b/task_application/package.json
@@ -15,7 +15,8 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "rsuite": "^5.77.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
