--- a/task_application/package.json
+++ b/task_application/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "bootstrap": "^5.3.3",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "jwt-simple": "^0.5.6",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
