--- a/task_application/package.json
+++ b/task_application/package.json
@@ -10,22 +10,30 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@vercel/postgres": "^0.10.0",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.39.3",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "jwt-simple": "^0.5.6",
     "next": "15.1.6",
+    "pg": "^8.13.3",
+    "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "rsuite": "^5.77.1"
+    "rsuite": "^5.77.1",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.1"
   }
 }
