--- a/task_application/package.json
+++ b/task_application/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "rsuite": "^5.77.1",
     "sequelize": "^6.37.5",
     "sqlite3": "^5.1.7"
