--- a/task_application/package.json
+++ b/task_application/package.json
@@ -6,10 +6,14 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.5.1",
+    "@testing-library/user-event": "^14.6.1",
     "@vercel/postgres": "^0.10.0",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
@@ -21,7 +25,6 @@
     "pg": "^8.13.3",
     "pg-hstore": "^2.3.4",
     "react": "^19.0.0",
-    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
@@ -30,11 +33,25 @@
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@eslint/eslintrc": "^3",
+    "@jest/globals": "^29.7.0",
+    "@playwright/test": "^1.50.1",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@types/node": "^22.13.9",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-fetch-mock": "^3.0.3",
     "postcss": "^8",
     "sequelize-cli": "^6.6.2",
-    "tailwindcss": "^3.4.1"
+    "supertest": "^7.0.0",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2"
   }
 }
